<resources>
    <string name="app_name">OCCCommunityServiceHours</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_up">No account yet? Create one</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="search">Search</string>
    <!-- Strings related to register-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="filter_setting">Filter</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_email">Email</string>
    <string name="register_button">CREATE ACCOUNT</string>
    <string name="link_login">Already a member? Login</string>


    <string name="prompt_find_event">Find an event</string>
    <string name="filter_by_semester">Filter By Semester</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="reset_button_text">Reset</string>

    <!-- String related to Event buttons-->
    <string name="request_for_validation">Request Validation</string>
    <string name="register">Register</string>
    <string name="registered">registered</string>
    <string name="validated">validated</string>
    <string name="validation_request_sent">Validation request sent\n Waiting for approval</string>
    <string name="cancel">Cancel</string>
    <string name="security_question_1">Question 1</string>y
    <string name="security_question_2">Question 2</string>
    <string name="security_answer_1">Answer 1</string>
    <string name="security_answer_2">Answer 2</string>
    <string name="view_participants">View participants</string>

    <!-- String related to Request Validation -->
    <string name="hours_volunteered">Hours volunteered:</string>
    <string name="responsibilities">Responsibilities:</string>
    <string name="briefly_responsibilities">Briefly describe your responsibilities</string>
    <string name="send_request">Send request</string>

    <!-- String related to AccountDetails fragment -->
    <string name="title_activity_account_detail">AccountDetail</string>
    <string name="service_hours">Service Hours:</string>
    <string name="edit_name">Your Name</string>
    <string name="edit_icon_desc">An icon of a pencil used to indicate an editable field.</string>
    <string name="profile_image_desc">A profile image.</string>
    <string name="update">Update Account</string>
    <string name="security_questions">Change Security Questions</string>

    <!-- String related to AttendedEvent fragment -->
    <string name="attended_event_list_title">Past Events</string>

    <!-- String related to AttendingEvent fragment -->
    <string name="active_event_list_title">Active Events</string>

    <!--String related to Request List-->
    <string name="number_of_request">Number of request:</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>

    <!--Host Event List Strings-->
    <string name="add_event">Add an Event</string>
    <string name="host_event_list_title">Your Hosted Events</string>

    <!--Edit Event Strings-->
    <string name="update_event">Update Event</string>

    <!--Create Event Details-->
    <string name="event_name_hint">Enter a name:</string>
    <string name="address_location">Enter an Address:</string>
    <string name="event_description">Enter a description:</string>
    <string name="start_date">Pick a starting date</string>
    <string name="end_date">Pick an end date</string>
    <string name="event_image">An image of the event</string>
    <string name="start_dialog">start</string>
    <string name="end_dialog">end</string>
    <string name="participant_empty">Be the first participant!</string>
    <string name="send_sms">send message</string>
    <string name="partcipant_list">Participant List</string>

    <!--dialog_update_password.xml Strings-->
    <string name="original_password">Enter your original password</string>
    <string name="new_password">Type your new password</string>

    <!--Participation Validation Activity-->
    <string name="sms_validation_request">Your validation request of </string>
    <string name="sms_approve"> has been approved.</string>
    <string name="sms_deny"> has been denied</string>
    <!--Home Page-->
    <string name="create_event_home">Create Event</string>
    <string name="all_event_home">All Event</string>
    <string name="past_event_home">Past Event</string>
    <string name="attending_event_home">Attending Event</string>
    <string name="upcoming_event_home">Upcoming Event</string>
    <string name="attended_event_home">Attended Event</string>


    <!--Menu Drawer-->
    <string name="my_account">My Profile</string>
    <string name="create_event">Create</string>
    <string name="all_event">All</string>
    <string name="past_event">Past</string>
    <string name="attending_event">Attending</string>
    <string name="upcoming_event">Upcoming</string>
    <string name="attended_event">Attended</string>
    <string name="validate_request">Validate Requests</string>
    <string name="home">Home</string>
    <string name="point">Hour Points</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Logout</string>
    <string name="event_part">Events</string>
    <string name="other_part">Extras</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="hour_points">Your total hours: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="forgot_password">Forgot your password?</string>
    <string name="security_answer">Answer</string>
    <string name="email_security">Enter your email address</string>
    <string name="submit">Submit</string>
    <string name="ask_email_description">Enter the email address associated to your account</string>
    <string name="ask_question_description">Answer Security Questions</string>
    <string name="update_security_question">Update security question</string>
    <string name="sign_in">Sign In</string>
    <string name="bronze_level">Bronze level: 100 to 174 hours</string>
    <string name="silver_level">Silver level: 175 to 249 hours</string>
    <string name="gold_level">Gold level: 250 hours or more</string>
    <string name="lifetime_level">Lifetime level: 4000 hours or more</string>
    <string name="attended_event_list">Attended Events</string>
    <string name="detail_medal">More detail about the levels, click here.</string>
    <string name="message">Message</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="recovery_questions">Recovery Questions</string>
    <string name="question_1">Question 1</string>
    <string name="send">Send</string>


    <!--Main and Admin Activity-->
    <string name="full_name_app">Orange Coast College \nCommunity Service Hours</string>
    <string name="description_level">These levels is based on The President’s Volunteer Service Award
    which celebrates and holds up as role models Americans making a positive impact as engaged and deeply committed volunteers.</string>
    <string name="learn_more">Learn more</string>
    <string name="frequently_ask">Frequently Asked Questions</string>

    <!-- LABELS -->
    <string name="enter_request">Enter your question here.</string>
    <string name="answer">Enter a key word (no space) and shake your device to see the answer to your question.\n EX: occ, ptk, hourpoint...</string>
    <string name="learn_more_keys">Learn more about keys question, click here.</string>
    <string name="change_password">Change Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ok">Ok</string>
    <string name="feedback_thank">We listen to you for improving our application.</string>


</resources>
