<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.dnguyen1214.occcommunityservicehours.AskEmailRecoveryFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/ask_email_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionTextView"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerEmailSecurityInputText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_security"
                android:id="@+id/emailSecurityEditText"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:onClick="submitEmailRecovery" />

    </LinearLayout>
</FrameLayout>
