<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="10dp">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/titleTextView"
        android:layout_gravity="center" android:textStyle="normal|bold" android:textSize="18sp"
        tools:text="@string/change_password"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/originalPasswordInputLayout"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/originalPasswordEditText"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="14sp"
                android:gravity="bottom|start" android:hint="@string/original_password"/>
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordInputLayout"
        android:background="@android:color/background_light">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPasswordEditText"
            android:layout_weight="1"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="14sp"
            android:gravity="bottom|start" android:hint="@string/new_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitAnswerButton"
        android:onClick="sendEmailPassword"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
</LinearLayout>