<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.dnguyen1214.occcommunityservicehours.ImageLevelFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light"
        android:id="@+id/imageLayout">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/presidents_volunteer_service_awards"
            android:id="@+id/imageView5" />

        <TextView
            android:text="@string/bronze_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/silver_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/gold_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/lifetime_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Button
            android:text="@android:string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/finishViewLevelIButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="viewDetailLevel"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</FrameLayout>
