<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="edu.orangecoastcollege.cs273.dnguyen1214.occcommunityservicehours.LoginActivity"
    android:background="@android:color/holo_orange_light">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="186dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/imageView4" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:hint="@string/prompt_username"
                    android:id="@+id/userNameLoginEditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordLoginEditText"
                    android:layout_weight="1"
                    android:hint="@string/prompt_password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signInButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:onClick="signIn"
                android:background="@android:color/holo_orange_dark"
                android:elevation="10dp" />

            <TextView
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:onClick="forgotPassword" />

            <TextView
                android:text="@string/action_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:onClick="signUp"
                android:paddingTop="20dp"
                android:textSize="18sp"
                android:paddingBottom="20dp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
